fix: alignment and scroll in address_list

--- a/store/src/styles/components/address_list.scss
+++ b/store/src/styles/components/address_list.scss
@@ -48,6 +48,14 @@
    background: #f9f9f9;
    padding: 14px 16px;
    border-radius: 8px;
+   display: block;
+   // for alignment in two columns
+   -webkit-flex: 0 0 48.9%;
+   -moz-box-flex: 0;
+   flex: 0 0 48.9%;
+   max-width: 48.85%;
+   position: relative;
+   min-height: 1px;
    // -webkit-border-radius: 0.125rem;
    // -moz-border-radius: 0.125rem;
    // -ms-border-radius: 0.125rem;
@@ -57,9 +65,12 @@
    //    border-color: rgba(16, 185, 129, 1);
    // }
 }
-.hern-address-list__address--active {
-   // border-color: rgba(16, 185, 129, 1);
+.hern-address-list__address:focus {
+   background: rgb(215 215 215 / 80%);
 }
+// .hern-address-list__address--active {
+//    background: rgba(187, 187, 187, 0.8);
+// }
 .hern-address-list__address--not-clickable {
    border-width: 2px;
    border-color: rgba(209, 213, 219, 1);
@@ -88,4 +99,17 @@
    font-weight: 600;
    font-size: 18px;
    line-height: 20px;
+}
+.hern-address-list-container__address {
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+   overflow-y: scroll;
+   height: calc(40vh - 64px);
+   .ant-row {
+      column-gap: 2rem;
+      row-gap: 2rem !important;
+   }
+}
+.hern-address-list-container__address::-webkit-scrollbar {
+   display: none;
 }
